# app/Http/Controllers/LunchDateController.php
@@ -1,7 +1,6 @@
 <?php
 
 namespace App\Http\Controllers;
-
 use App\Models\LunchDate;
 use App\Models\User;
 use Illuminate\Http\Request;
@@ -36,53 +35,7 @@ class LunchDateController extends Controller
             return redirect('/admindashboard')->with('message', 'Duplicate Entry');
         }
     }
- /**
-     * @OA\Post(
-     ** path="/api/off-days",
-     *   tags={"LunchDateController"},
-     *   summary="shows weekend to user",
-     *   operationId="off_days",
-     *
-     *  @OA\RequestBody(
-     *  @OA\JsonContent(
-     *
-     *  @OA\Property(property="user_id", type="integer"),
-     *  @OA\Property(property="token", type="string"),
-     *
-     *
-     *  )),
 
-
-     *   @OA\Response(
-     *      response=200,
-     *       description="Successfully Taken Lunch",
-     *      @OA\MediaType(
-     *           mediaType="application/json",
-     *      )
-     *   ),
-     * @OA\Response(
-     *          response=409,
-     *          description="You already taken lunch"
-     *      ),
-     *   @OA\Response(
-     *      response=401,
-     *       description="Unauthenticated"
-     *   ),
-     *   @OA\Response(
-     *      response=400,
-     *      description="Bad Request"
-     *   ),
-     *   @OA\Response(
-     *      response=404,
-     *      description="not found"
-     *   ),
-     *      @OA\Response(
-     *          response=403,
-     *          description="Forbidden"
-     *      ),
-     *
-     *)
-     **/
     //shows all off days
     public function showWeekend(Request $req)
     {
