# storage/api-docs/api-docs.json
@@ -4,13 +4,8 @@
         "title": "Your super  ApplicationAPI",
         "version": "1.0.0"
     },
-    "servers": [
-        {
-            "url": "https://lunch-api.dev.simform.solutions/"
-        }
-    ],
     "paths": {
-        "/api/signin": {
+        "/signin": {
             "post": {
                 "tags": [
                     "AuthController"
@@ -36,7 +31,7 @@
                 }
             }
         },
-        "/api/signout": {
+        "/signout": {
             "post": {
                 "tags": [
                     "AuthController"
@@ -82,7 +77,7 @@
                 }
             }
         },
-        "/api/getdata": {
+        "/getdata": {
             "post": {
                 "tags": [
                     "AuthController"
@@ -125,56 +120,7 @@
                 }
             }
         },
-        "/api/off-days": {
-            "post": {
-                "tags": [
-                    "LunchDateController"
-                ],
-                "summary": "shows weekend to user",
-                "operationId": "off_days",
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "user_id": {
-                                        "type": "integer"
-                                    },
-                                    "token": {
-                                        "type": "string"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Successfully Taken Lunch",
-                        "content": {
-                            "application/json": {}
-                        }
-                    },
-                    "409": {
-                        "description": "You already taken lunch"
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "404": {
-                        "description": "not found"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    }
-                }
-            }
-        },
-        "/api/lunch-taken": {
+        "/lunch-taken": {
             "post": {
                 "tags": [
                     "RecordController"
